Setup GitHub Pages deployment
- Added GitHub Pages build configuration in angular.json
- Added deployment scripts to package.json
- Created GitHub Actions workflow for automatic deployment
- Added angular-cli-ghpages dependency
- Added .nojekyll file for GitHub Pages
- Added 404.html for SPA routing support
- Updated index.html with GitHub Pages redirect handling

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,24 @@
               ],
               "outputHashing": "all"
             },
+            "github-pages": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kB",
+                  "maximumError": "4kB"
+                }
+              ],
+              "outputHashing": "all",
+              "baseHref": "/portfolio/",
+              "prerender": false,
+              "ssr": false
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
