Fix GitHub Pages routing - set base href to root
- Changed baseHref from '/portfolio/' to '/' in angular.json
- Updated 404.html to use root base href
- Modified SPA redirect script to work with root deployment
- This should fix the issue where README was showing at root URL

--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/portfolio/",
+              "baseHref": "/",
               "prerender": false,
               "ssr": false
             },
