Fix GitHub Pages routing - revert to correct base href
- Reverted baseHref back to '/portfolio/' in angular.json
- Updated 404.html to use '/portfolio/' base href
- Fixed SPA redirect script with pathSegmentsToKeep = 1
- GitHub Pages project repos need /repository-name/ base href

--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/",
+              "baseHref": "/portfolio/",
               "prerender": false,
               "ssr": false
             },
